[package]
name = "apollo-client"
version = "0.1.0"
authors = ["zys864 <zyspage@gmail.com>"]
edition = "2021"
description = "apollo-client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.58"
derive_builder = "0.11.2"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["json"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
tokio = { version = "1.19.2", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
